dist folder added

--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
           "strict": true
         }
       },
-      "root": "",
+      "root": "e2e",
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
